# functions/_pydantic/models/tickets_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  <stdin>
-#   timestamp: 2026-04-12T12:16:09+00:00
+#   timestamp: 2026-04-12T12:26:06+00:00
 
 from __future__ import annotations
 
@@ -112,9 +112,13 @@ class UpdateTicketRequest(BaseModel):
 
 
 class ValidateTicketJwtRequest(BaseModel):
-    jwt: str = Field(..., description='JWT minted for the ticket QR code.')
+    qr_token: str = Field(..., description='JWT minted for the ticket QR code.')
 
 
 class ValidateTicketJwtResponse(BaseModel):
     valid: bool = Field(..., description='Whether the provided ticket JWT is valid.')
     ticket: Optional[TicketObject] = None
+    reason: Optional[str] = Field(
+        None,
+        description='If the ticket JWT is not valid, this field may contain a reason for the invalidity.',
+    )
